# fast_api

./: .env  Dockerfile  compose.yaml  package-lock.json  pyproject.toml
pra_api/: main.py
tests/: test_main.py
