[tool.poetry]
name = "pra-api"
version = "0.1.0"
description = ""
authors = ["kamilhussain25 <142178716+kamilhussain25@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"
httpx = "^0.27.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
